rename Coord to Point3D, update README