@@ -5,7 +5,7 @@ import lombok.Setter;
 import lombok.ToString;
 import org.apache.commons.lang3.ArrayUtils;
 import org.base.advent.Solution;
-import org.base.advent.util.Coord;
+import org.base.advent.util.Point3D;
 
 import java.util.List;
 import java.util.Map;
@@ -38,22 +38,21 @@ public class Day20 implements Solution<List<Day20.Particle>> {
         for (int i = 0; i < 50; i++) {
             particles.forEach(Particle::tick);
 
-            final Map<Coord, List<Particle>> groups = particles.stream()
+            final Map<Point3D, List<Particle>> groups = particles.stream()
                     .collect(Collectors.groupingBy(Particle::getPosition));
             final List<Particle> collided = groups.values().stream()
                     .filter(list -> list.size() > 1)
                     .flatMap(List::stream)
-                    .collect(Collectors.toList());
+                    .toList();
             particles.removeAll(collided);
         }
 
         return particles.size();
     }
 
-    @SuppressWarnings("OptionalGetWithoutIsPresent")
-    public int findClosest(final List<Particle> particles) {
-        final int closest = particles.stream().mapToInt(p -> p.getPosition().manhattanDistance()).min().getAsInt();
-        final int[] distances = particles.stream().mapToInt(p -> p.getPosition().manhattanDistance()).toArray();
+    public long findClosest(final List<Particle> particles) {
+        final long closest = particles.stream().mapToLong(p -> p.getPosition().manhattanDistance()).min().orElseThrow();
+        final long[] distances = particles.stream().mapToLong(p -> p.getPosition().manhattanDistance()).toArray();
 
         return ArrayUtils.indexOf(distances, closest);
     }
@@ -74,24 +73,24 @@ public class Day20 implements Solution<List<Day20.Particle>> {
         // p=<-3787,-3683,3352>, v=<41,-25,-124>, a=<5,9,1>
         final Matcher matcher = PATTERN.matcher(input);
         if (matcher.matches()) {
-            return new Particle(toCoord(matcher.group(1)), toCoord(matcher.group(2)), toCoord(matcher.group(3)));
+            return new Particle(toPoint(matcher.group(1)), toPoint(matcher.group(2)), toPoint(matcher.group(3)));
         }
         else
             throw new RuntimeException("Conversion failed: "+ input);
     }
 
-    protected Coord toCoord(final String input) {
-        return new Coord(Stream.of(input.split(",")).mapToInt(Integer::valueOf).toArray());
+    protected Point3D toPoint(final String input) {
+        return new Point3D(Stream.of(input.split(",")).mapToLong(Long::valueOf).toArray());
     }
 
     @Getter @Setter @ToString
     public static class Particle {
         // position (p), velocity (v), and acceleration (a), each in the format <X,Y,Z>.
-        private Coord position;
-        private Coord velocity;
-        private Coord acceleration;
+        private Point3D position;
+        private Point3D velocity;
+        private Point3D acceleration;
 
-        public Particle(final Coord p, final Coord v, final Coord a) {
+        public Particle(final Point3D p, final Point3D v, final Point3D a) {
             position = p;
             velocity = v;
             acceleration = a;
@@ -107,8 +106,8 @@ public class Day20 implements Solution<List<Day20.Particle>> {
          *  - Increase the Z position by the Z velocity.
          */
         public void tick() {
-            velocity = new Coord(velocity.x + acceleration.x, velocity.y + acceleration.y, velocity.z + acceleration.z);
-            position = new Coord(position.x + velocity.x, position.y + velocity.y, position.z + velocity.z);
+            velocity = new Point3D(velocity.x + acceleration.x, velocity.y + acceleration.y, velocity.z + acceleration.z);
+            position = new Point3D(position.x + velocity.x, position.y + velocity.y, position.z + velocity.z);
         }
     }
 }
